src/objects/CustomerAssets__c.object
<CustomObject>
    <fields>
        <fullName>AbnormalNumbe__c</fullName>
        <label>异常人数（人）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountNature__c</fullName>
        <label>客户性质</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>数量（台）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualIncome__c</fullName>
        <label>年收入（元）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppliedSituation__c</fullName>
        <label>使用状况</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>使用中</fullName>
                </value>
                <value>
                    <fullName>停用</fullName>
                </value>
                <value>
                    <fullName>维修</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>区域</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>东北片区</fullName>
                </value>
                <value>
                    <fullName>华北片区</fullName>
                </value>
                <value>
                    <fullName>华东片区</fullName>
                </value>
                <value>
                    <fullName>华南片区</fullName>
                </value>
                <value>
                    <fullName>鲁豫片区</fullName>
                </value>
                <value>
                    <fullName>西北片区</fullName>
                </value>
                <value>
                    <fullName>西南片区</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BFdate__c</fullName>
        <label>报废日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>常规品牌</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BuyTime__c</fullName>
        <label>准分子购买时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cataract__c</fullName>
        <defaultValue>0</defaultValue>
        <label>白内障(%) 停用</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CheckQuantity__c</fullName>
        <label>总检查量(停用)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>客户端</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConversionRate__c</fullName>
        <formula>DailyCheck__c  /  DailyOutpatient__c</formula>
        <label>日门诊转化率(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>客户资产</relationshipLabel>
        <relationshipName>CustomerName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerRecordType__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>客户资产记录类型</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DailyCheck__c</fullName>
        <label>日均检查量（天）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyOutpatient__c</fullName>
        <label>日门诊量（天）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <label>手术医生</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DurableYear__c</fullName>
        <label>准分子标准使用年限（年）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DurableYears__c</fullName>
        <label>飞白标准使用年限（年）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Earnings__c</fullName>
        <label>收益（万元）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EndingDate__c</fullName>
        <label>试用结束日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EquipmentTime__c</fullName>
        <formula>TODAY()  -   InstalledTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>设备运行时间（天）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>设备名称</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOUR__c</fullName>
        <formula>CreatedBy.LfourDepartment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>客户资产所有者：四级部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <formula>IF(Field7__c = 0, 0, Field3__c / Field7__c)</formula>
        <label>白内障%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <formula>IF(Field7__c = 0, 0, Field2__c / Field7__c)</formula>
        <label>眼底%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <formula>IF(Field7__c = 0, 0, Field6__c / Field7__c)</formula>
        <label>门诊%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fundus__c</fullName>
        <defaultValue>0</defaultValue>
        <label>眼底（%）停用</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>客户性质等级</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HospitalMedical__c</fullName>
        <label>院内体检（人）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InstalledTime__c</fullName>
        <label>装机时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MalapropismBrand__c</fullName>
        <label>飞白品牌</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Zimmer</fullName>
                </value>
                <value>
                    <fullName>博士伦</fullName>
                </value>
                <value>
                    <fullName>爱尔康</fullName>
                </value>
                <value>
                    <fullName>LENSAR</fullName>
                </value>
                <value>
                    <fullName>LUNEAU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>飞白型号</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MalapropismBrand__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LENSX LASER</fullName>
                </value>
                <value>
                    <fullName>LLS-fs 3D</fullName>
                </value>
                <value>
                    <fullName>Victus</fullName>
                </value>
                <value>
                    <fullName>Z8</fullName>
                </value>
                <value>
                    <fullName>VX-120</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MolecularBrand__c</fullName>
        <label>准分子品牌</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>阿玛仕</fullName>
                </value>
                <value>
                    <fullName>爱尔康</fullName>
                </value>
                <value>
                    <fullName>蔡司</fullName>
                </value>
                <value>
                    <fullName>AMO</fullName>
                </value>
                <value>
                    <fullName>博士伦</fullName>
                </value>
                <value>
                    <fullName>雷赛</fullName>
                </value>
                <value>
                    <fullName>尼德克</fullName>
                </value>
                <value>
                    <fullName>无</fullName>
                </value>
                <value>
                    <fullName>SCHWIND</fullName>
                    <isActive>false</isActive>
                    <label>SCHWIND</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MolecularModel__c</fullName>
        <label>准分子型号</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MolecularBrand__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EX500</fullName>
                </value>
                <value>
                    <fullName>Mel80</fullName>
                </value>
                <value>
                    <fullName>Mel90</fullName>
                </value>
                <value>
                    <fullName>VISX S4 IR</fullName>
                </value>
                <value>
                    <fullName>500E</fullName>
                </value>
                <value>
                    <fullName>750S</fullName>
                </value>
                <value>
                    <fullName>1050RS</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NeedTreat__c</fullName>
        <label>需要治疗（人）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One__c</fullName>
        <formula>CreatedBy.PrimarySector__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>客户资产所有者：一级部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutpatientConversion__c</fullName>
        <label>门诊检查转化率（%）（停用）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OutpatientService__c</fullName>
        <defaultValue>0</defaultValue>
        <label>门诊（%）停用</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PhysicalExamination__c</fullName>
        <defaultValue>0</defaultValue>
        <label>体检（%）停用</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PlaceTo__c</fullName>
        <label>放置地</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>特检</fullName>
                </value>
                <value>
                    <fullName>眼底</fullName>
                </value>
                <value>
                    <fullName>屈光</fullName>
                </value>
                <value>
                    <fullName>白内障</fullName>
                </value>
                <value>
                    <fullName>门诊</fullName>
                </value>
                <value>
                    <fullName>视光</fullName>
                </value>
                <value>
                    <fullName>VIP门诊</fullName>
                </value>
                <value>
                    <fullName>干保中心</fullName>
                </value>
                <value>
                    <fullName>青光眼</fullName>
                </value>
                <value>
                    <fullName>小儿眼科</fullName>
                </value>
                <value>
                    <fullName>体检中心</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductModel__c</fullName>
        <label>欧堡型号</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daytona</fullName>
                </value>
                <value>
                    <fullName>200Tx</fullName>
                </value>
                <value>
                    <fullName>P200</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>省/直辖市</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseTime1__c</fullName>
        <label>飞秒购买时间1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PurchaseTime2__c</fullName>
        <label>飞秒购买时间2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>年手术量或检查数量（例）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rates__c</fullName>
        <label>收费标准（元）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refraction__c</fullName>
        <defaultValue>0</defaultValue>
        <label>屈光（%）停用</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RelevanceRatio__c</fullName>
        <label>检出率（%）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>备注</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondBrand1__c</fullName>
        <label>飞秒品牌1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>蔡司</fullName>
                </value>
                <value>
                    <fullName>爱尔康</fullName>
                </value>
                <value>
                    <fullName>科林</fullName>
                </value>
                <value>
                    <fullName>AMO</fullName>
                </value>
                <value>
                    <fullName>无</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondBrand2__c</fullName>
        <label>飞秒品牌2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>蔡司</fullName>
                </value>
                <value>
                    <fullName>爱尔康</fullName>
                </value>
                <value>
                    <fullName>科林</fullName>
                </value>
                <value>
                    <fullName>AMO</fullName>
                </value>
                <value>
                    <fullName>无</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondBuyTime__c</fullName>
        <label>飞白购买时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SecondModel1__c</fullName>
        <label>飞秒型号1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VisuMAX</fullName>
                </value>
                <value>
                    <fullName>FS200</fullName>
                </value>
                <value>
                    <fullName>intyalase</fullName>
                </value>
                <value>
                    <fullName>达芬奇</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondModel2__c</fullName>
        <label>飞秒型号2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VisuMAX</fullName>
                </value>
                <value>
                    <fullName>FS200</fullName>
                </value>
                <value>
                    <fullName>intyalase</fullName>
                </value>
                <value>
                    <fullName>达芬奇</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>试用开始日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TWO__c</fullName>
        <formula>CreatedBy.SecondarySector__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>客户资产所有者：二级部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Three__c</fullName>
        <formula>CreatedBy.TertiarySector__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>客户资产所有者：三级部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalEarnings__c</fullName>
        <formula>Rates__c * CheckQuantity__c</formula>
        <label>欧堡总收益（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalOperation__c</fullName>
        <label>屈光手术年手术总量（人）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrialTime__c</fullName>
        <label>试用时间（Hr）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TryOut__c</fullName>
        <label>是否试用</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>常规型号</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsageAmount1__c</fullName>
        <label>飞秒使用量（人）1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UsageAmount2__c</fullName>
        <label>飞秒使用量（人）2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UsefulLife__c</fullName>
        <label>标准使用年限（年）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YearsSince__c</fullName>
        <label>飞白年手术量（眼）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fmsb1__c</fullName>
        <formula>YEAR( TODAY() ) - YEAR(PurchaseTime1__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>飞秒设备已使用时间(年)1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fmsb2__c</fullName>
        <formula>YEAR( TODAY() ) - YEAR(PurchaseTime2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>飞秒设备已使用时间(年)2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kshzqkbfb__c</fullName>
        <formula>PhysicalExamination__c + Refraction__c + Fundus__c + Cataract__c + OutpatientService__c</formula>
        <label>科室使用情况汇总百分比</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>yCRMbm__c</fullName>
        <label>原CRM资产编码</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yCRMcpbh__c</fullName>
        <label>原CRM产品编号</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yCRMcpcs__c</fullName>
        <label>原CRM产品厂商</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yCRMcpmc__c</fullName>
        <label>原CRM产品名称</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yCRMcpxh__c</fullName>
        <label>原CRM产品型号</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zfzsy__c</fullName>
        <formula>YEAR( TODAY() ) - YEAR( BuyTime__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>准分子设备已使用时间(年)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>客户资产</label>
    <listViews>
        <fullName>Field11122</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CustomerName__c</field>
            <operation>contains</operation>
            <value>康明爱尔</value>
        </filters>
        <label>全部客户资产</label>
    </listViews>
    <nameField>
        <displayFormat>KHZC-{0000000}</displayFormat>
        <label>客户资产编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>客户资产</pluralLabel>
    <recordTypes>
        <fullName>Aalborg</fullName>
        <active>true</active>
        <label>欧堡</label>
    </recordTypes>
    <recordTypes>
        <fullName>Common</fullName>
        <active>true</active>
        <label>常规</label>
    </recordTypes>
    <recordTypes>
        <fullName>LensAr</fullName>
        <active>true</active>
        <label>飞白</label>
    </recordTypes>
    <recordTypes>
        <fullName>myopia</fullName>
        <active>true</active>
        <label>准分子</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>keshiqingkuang</fullName>
        <active>false</active>
        <errorConditionFormula>AND(RecordTypeId=&quot;0126F000001YcIy&quot;,PhysicalExamination__c + Refraction__c + Cataract__c + Fundus__c + OutpatientService__c   &lt;&gt; 1)</errorConditionFormula>
        <errorMessage>科室使用情况需要达到百分之百才可以保存客户资产</errorMessage>
    </validationRules>
</CustomObject>